# overleaf_sync

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
overleaf_pull/: __init__.py  cli.py  config.py  git_ops.py  notifier.py  overleaf_api.py  scheduler.py  status.py  sync.py
overleaf_sync/: cli.py  config.py  cookies.py  git_ops.py  olbrowser_login.py  projects.py  scheduler.py  sync.py
tests/: test_remote_migration.py  test_status_logs.py
