[project]
name = "overleaf-pull"
version = "0.1.0"
description = "Pull-only Overleaf project sync using Rookie + PyOverleaf"
authors = [{ name = "Leander Kurscheidt" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["overleaf", "git", "latex", "sync", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
]
dependencies = [
  "rookiepy==0.5.4",
  "pyoverleaf>=0.1.7",
  "browsercookie>=0.7",
]

[project.optional-dependencies]
qt = ["PySide6>=6.6"]

[project.scripts]
overleaf-pull = "overleaf_sync.cli:main"

[project.urls]
Homepage = "https://github.com/LeanderK/overleaf_sync"
Issues = "https://github.com/LeanderK/overleaf_sync/issues"

[tool.uv]
package = true
# uv will install from [project] dependencies

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
