[project]
name = "overleaf-pull"
version = "0.6.0"
description = "Pull-only Overleaf project sync using PyOverleaf"
authors = [{ name = "Leander Kurscheidt" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["overleaf", "git", "latex", "sync", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
]
dependencies = [
  "pyoverleaf>=0.1.7",
  "browsercookie>=0.7",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
qt = ["PySide6>=6.6"]

[project.scripts]
overleaf-pull = "overleaf_pull.cli:main"

[project.urls]
Homepage = "https://github.com/LeanderK/overleaf_sync"
Issues = "https://github.com/LeanderK/overleaf_sync/issues"

[tool.uv]
package = true
# uv will install from [project] dependencies

[tool.hatch.build.targets.wheel]
packages = ["overleaf_pull"]

[tool.hatch.build.targets.sdist]
include = ["overleaf_pull/**", "README.md", "pyproject.toml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
